file.log
  File "t.py", line 1
    print("asd)
              ^
SyntaxError: EOL while scanning string literal
